apps/contextapi/overlays/staging/contextapi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["192.168.50.125","192.168.50.159","192.168.50.66"],"port":443,"protocol":"HTTPS","serviceName":"contextsuite:contextsuite","ingressName":"contextsuite:contextsuite","hostname":"contextsuite.ai","path":"/","allNodes":false}]
  name: contextapi
  namespace: contextsuite
spec:
  rules:
    - host: contextsuite.ai
      http:
        paths:
          - backend:
              service:
                name: contextapi
                port:
                  number: 4001
            path: /stats
            pathType: Prefix
          - backend:
              service:
                name: contextapi
                port:
                  number: 4001
            path: /context
            pathType: Prefix
    - host: www.contextsuite.ai
      http:
        paths:
          - backend:
              service:
                name: contextapi
                port:
                  number: 3000
            path: /stats
            pathType: Prefix
          - backend:
              service:
                name: contextapi
                port:
                  number: 3000
            path: /context
            pathType: Prefix
  tls:
    - hosts:
        - contextsuite.ai
        - www.contextsuite.ai
      secretName: wild-contextsuite-ai-cert
